--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -7,8 +7,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/main.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <header>
@@ -23,7 +23,8 @@
         </div>
     </header>
     <main>
-        <iframe src="http://34.64.238.233:3000/d-solo/i7n74InMk/emissions?orgId=1&refresh=5s&theme=light&panelId=2" width="450" height="200" frameborder="0"></iframe>
+        {% block content %}
+        {% endblock %}
     </main>
     <footer>
 
