--- a/template/status/status.html
+++ b/template/status/status.html
@@ -2,5 +2,7 @@
 {% extends "layout/base.html" %}
 
 {%  block content -%}
-    <iframe src="http://34.64.238.233:3000/d-solo/i7n74InMk/emissions?orgId=1&refresh=5s&theme=light&panelId=2" width="450" height="200" frameborder="0"></iframe>
+    <div class="chart">
+        <iframe src="http://34.64.238.233:3000/d-solo/i7n74InMk/emissions?orgId=1&refresh=5s&theme=light&panelId=2" frameborder="0"></iframe>
+    </div>
 {%  endblock %}
