--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,19 @@
+
+// header
+$headerFontColor: #FFFFFF;
+$headerBackgroundColor: #5A3D63;
+$headerHoverBackgroundColor: #815C8D;
+$headerHeight: 50px;
+
+//sidebar
+$sidebarFontColor: #FFFFFF;
+$sidebarBackgroundColor: #3C2942;
+$sidebarHoverBackgroundColor: #553D5C;
+
+
 @font-face {
   font-family: Roboto;
-  src: url('../fonts/Roboto-Regular.ttf');
+  src: url("../fonts/Roboto-Regular.ttf");
 }
 
 @font-face {
@@ -8,37 +21,125 @@
   src: url("../fonts/NotoSansKR-Regular.otf");
 }
 
+html {
+  min-height: 100vh;
+}
+
 body {
-  background-color: #FFFFFF;
-  color: #333333;
   font-family: Roboto, Noto Sans KR, sans-serif;
+  height: 100vh;
+}
+
+.body-container {
+  height: 100%;
 }
 
 .global-nav-container {
-  border-bottom: 1px solid rgba(255, 255, 255, 0.75);
-  padding: 10px;
+  height: $headerHeight;
+  color: $headerFontColor;
+  background-color: $headerBackgroundColor;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
   
   .global-nav {
-    margin: 0 auto;
+    height: 100%;
+    display: flex;
+    
+    .logo {
+      height: 100%;
+      display: flex;
+      align-items: center;
+      margin-right: auto;
+  
+      a {
+        display: flex;
+        align-items: center;
+        padding: 0 10px;
+        height: 100%;
+        color: $headerFontColor;
+  
+        img {
+          width: 30px;
+        }
+      }
+    }
     
     .global-nav-links {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      
-      li a {
-        color: #333333;
-        padding: 10px;
-        font-size: 16px;
-        
-        img {
-          width: 40px;
+  
+      li {
+        display: flex;
+        align-items: center;
+        height: 100%;
+  
+        a {
+          display: flex;
+          align-items: center;
+          padding: 10px;
+          height: 100%;
+          color: $headerFontColor;
+          transition-duration: 0.5s;
+    
+          &:hover {
+            background-color: $headerHoverBackgroundColor;
+          }
         }
       }
     }
   }
 }
 
-.inner-width {
-  max-width: 1000px;
+
+main {
+  display: flex;
+  height: calc(100% - #{$headerHeight});
+  
+  .sidebar-nav {
+    background-color: $sidebarBackgroundColor;
+    color: $sidebarFontColor;
+    width: 300px;
+    
+    .sidebar-nav-links {
+      
+      
+      .nav-time {
+        height: 50px;
+        
+        a {
+          display: flex;
+          align-items: center;
+          width: 100%;
+          height: 100%;
+          padding: 20px;
+          color: $sidebarFontColor;
+          transition-duration: 0.5s;
+          
+          img {
+            height: 10px;
+            margin-left: auto;
+          }
+          
+          &:hover {
+            background-color: $sidebarHoverBackgroundColor;
+          }
+        }
+      }
+    }
+  }
+}
+
+.content-container {
+  width: 100%;
+}
+
+.chart {
+  border: 1px solid #DDDDDD;
+  padding: 10px;
+  
+  iframe {
+    height: 40vh;
+    width: 100%;
+  }
 }
