--- a/template/status/status.html
+++ b/template/status/status.html
@@ -3,6 +3,6 @@
 
 {%  block content -%}
     <div class="chart">
-        <iframe src="http://34.64.238.233:3000/d-solo/i7n74InMk/emissions?orgId=1&refresh=5s&theme=light&panelId=2" frameborder="0"></iframe>
+        <iframe src="http://34.64.238.233:3000/d-solo/i7n74InMk/emissions?orgId=1&refresh=5s&from=now-30m&to=now&theme=light&panelId=2" frameborder="0"></iframe>
     </div>
 {%  endblock %}
