--- a/css/main_small.css
+++ b/css/main_small.css
@@ -1,6 +1,9 @@
 main .sidebar-nav {
   position: fixed;
   height: 100vh;
+  width: 100vw;
+  left: -100vw;
+  transition-duration: 0.5s;
 }
 
 .chart iframe {
