--- a/scss/main_small.scss
+++ b/scss/main_small.scss
@@ -14,6 +14,9 @@ main {
   .sidebar-nav {
     position: fixed;
     height: 100vh;
+    width: 100vw;
+    left: -100vw;
+    transition-duration: 0.5s;
   }
 }
 
