--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -7,6 +7,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <link rel="icon" href="images/svg/logo.svg">
+    
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" media="(max-width: 768px)" href="css/main_small.css">
@@ -16,7 +19,7 @@
         <div class="global-nav-container">
             <nav class="global-nav">
                 <div class="logo">
-                    <a href="#"><div class="logo-image">shero-logo</div></a>
+                    <a href="/"><div class="logo-image">shero-logo</div></a>
                 </div>
                 <ul class="global-nav-links">
                     <li><a href="#" id="menu-toggle-btn"><img src="images/svg/menu.svg" alt="menu"></a></li>
@@ -28,7 +31,7 @@
         <nav class="sidebar-nav">
             <ul class="sidebar-nav-links">
                 <li class="nav-time">
-                    <a href="#">
+                    <a href="/status">
                         <span>DashBoard</span>
                         <img src="images/svg/arrow.svg">
                     </a>
