add control page

--- a/template/layout/base.html
+++ b/template/layout/base.html
@@ -31,13 +31,13 @@
         <nav class="sidebar-nav">
             <ul class="sidebar-nav-links">
                 <li class="nav-time">
-                    <a href="/status">
+                    <a href="/dashboard">
                         <span>DashBoard</span>
                         <img src="images/svg/arrow.svg">
                     </a>
                 </li>
                 <li class="nav-time">
-                    <a href="#">
+                    <a href="/control">
                         <span>Control</span>
                         <img src="images/svg/arrow.svg">
                     </a>
