--- a/template/control.html
+++ b/template/control.html
@@ -3,7 +3,7 @@
 
 {%  block content -%}
 <form method="post" action="">
-    <input class="text-input" type="text" placeholder="send data">
-    <input class="submit-btn" type="submit">
+    <input type="text" name="data" class="text-input" placeholder="send data">
+    <button class="submit-btn">전송</button>
 </form>
 {%  endblock %}
